--- a/src/components/layout/Navbar/NavLink.module.css
+++ b/src/components/layout/Navbar/NavLink.module.css
@@ -1,3 +1,8 @@
+/*
+  NavLink Styles
+  --------------
+  Styles for individual navigation links, including hover and active states.
+*/
 .navLink {
   display: flex;
   align-items: center;
