--- a/src/components/ui/CardBlockchain/CardBlockchain.module.css
+++ b/src/components/ui/CardBlockchain/CardBlockchain.module.css
@@ -1,8 +1,9 @@
+/* Layout */
 .card__blockchain {
   padding: 20px;
   border: 1px solid hsl(var(--border));
   border-radius: var(--radius-base);
-  background-color: hsl(var(--card) / .4);
+  background-color: hsl(var(--card) / 0.4);
   backdrop-filter: blur(24px);
   display: flex;
   flex-direction: column;
@@ -12,16 +13,18 @@
   z-index: 1;
 }
 
+/* Header */
 .card__blockchainHeader {
   display: flex;
   align-items: center;
-  gap: .7rem;
+  gap: 0.7rem;
 }
 
+/* Icons */
 .card__blockchainIconContainer {
   padding: 10px;
   border-radius: var(--radius-base);
-  background-color: hsl(var(--primary) / .2);
+  background-color: hsl(var(--primary) / 0.2);
 }
 
 .card__blockchainIcon {
@@ -29,10 +32,11 @@
   font-size: 1.2rem;
 }
 
+/* Content Info */
 .card__blockchainTextsInfo {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .card__blockchainTextsTitle {
@@ -42,10 +46,11 @@
 }
 
 .card__blockchainTextsInfo {
-  font-size: .8rem;
+  font-size: 0.8rem;
   color: hsl(var(--temp-optimal));
 }
 
+/* Hash & Block ID */
 .card__blockchainHash,
 .card__blockchainBlockId {
   background-color: hsl(var(--secondary));
@@ -55,7 +60,7 @@
 }
 
 .card__blockchainHash {
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .card__blockchainHashTexts {
@@ -70,7 +75,7 @@
 }
 
 .card__blockchainBlockId {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   text-overflow: clip;
 }
 
@@ -87,12 +92,13 @@
   word-break: break-all;
   width: 100%;
   background-color: hsl(var(--card));
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   padding: 15px;
   border-radius: var(--radius-base);
   transition: 400ms ease;
 }
 
+/* Buttons */
 .transaction__button {
   display: flex;
   gap: 1rem;
@@ -115,5 +121,3 @@
   gap: 1rem;
   width: 100%;
 }
-
-
